--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "Clean Blog",
-  "name": "startbootstrap-clean-blog",
-  "version": "4.0.0-beta",
-  "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
+  "title": "Resume",
+  "name": "startbootstrap-resume",
+  "version": "4.0.0-beta.2",
+  "description": "Resume is a simple, yet elegant resume and CV theme for Bootstrap 4.",
   "keywords": [
     "css",
     "sass",
@@ -11,9 +11,9 @@
     "theme",
     "template"
   ],
-  "homepage": "https://startbootstrap.com/template-overviews/clean-blog",
+  "homepage": "https://startbootstrap.com/template-overviews/resume",
   "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog/issues",
+    "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
     "email": "feedback@startbootstrap.com"
   },
   "license": "MIT",
@@ -23,18 +23,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog.git"
+    "url": "https://github.com/BlackrockDigital/startbootstrap-resume.git"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
-    "font-awesome": "4.7.0",
+    "bootstrap": "^4.0.0-beta.2",
+    "devicons": "^1.8.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.11.1"
+    "popper.js": "^1.12.6",
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
     "browser-sync": "2.18.13",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "3.7.0",
+    "gulp-clean-css": "3.9.0",
     "gulp-header": "1.8.9",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
